*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/arch_struct.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/arch_struct.htm
@@ -75,6 +75,37 @@ The functionality in JFace is described in
 
 
 
+<H3>Team support</H3>
+
+
+
+<p>
+The Team plug-ins allow other plug-ins to define and register implementations
+for team programming, repository access, and versioning.&nbsp; The Eclipse SDK
+includes a CVS plug-in that uses the team support to provide CVS client support
+in the SDK.&nbsp;&nbsp;</p>
+
+
+
+<p>Team support is described in <a href="team.htm">Team support</a>.</p>
+
+
+
+<H3>Debug support</H3>
+
+
+
+<p>
+The Debug plug-ins allow other plug-ins to implement language specific program
+launchers and debuggers.&nbsp;</p>
+
+
+
+<p>Debug support is described in <a href="debug.htm">Program debug and launch
+support</a>.</p>
+
+
+
 <h3 >
 Help System</h3>
 
@@ -95,22 +126,6 @@ level documentation configurations.</P>
 
 
 <P >The help facility is described in <a href="help.htm">Plugging in help</a>.</P>
-
-
-
-<H3>Team support</H3>
-
-
-
-<p>
-The Team plug-ins allow other plug-ins to define and register implementations
-for team programming, repository access, and versioning.&nbsp; The Eclipse SDK
-includes a CVS plug-in that uses the team support to provide CVS client support
-in the SDK.&nbsp;&nbsp;</p>
-
-
-
-<p>Team support is described in <a href="team.htm">Team support</a>.</p>
 
 
 
