--- a/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_install.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_install.htm
@@ -33,7 +33,7 @@ qualified id, including the dots.&nbsp; In this case, we need to create a direct
 <P >If you are currently running the workbench, you will need to shut it down
 and restart it.&nbsp; When the platform starts, it assembles a list of all of the plug-ins installed in the system, called the plug-in registry. This registry keeps track of plug-ins and the extension points that they contribute.&nbsp;
 Restarting the workbench will cause it to find your new plug-in.</P>
-<P >(Note:&nbsp; We are installing and launching the workbench ourselves to show
+<P >(Note:&nbsp; We are installing our plug-in and launching the workbench ourselves to show
 exactly how plug-ins are installed and found in the platform.&nbsp; The PDE
 plug-in automates much of this process by introducing a special launcher that
 launches a self-hosted workbench.&nbsp; We are ignoring this for now to keep
