--- a/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_minimal.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_minimal.htm
@@ -42,7 +42,7 @@ For our hello world plug-in, we will implement our own view to greet the user wi
 <P >
 The package <b><a href="../reference/api/org/eclipse/ui/package-summary.html"> org.eclipse.ui</a></b>
 and its sub packages contain the public interfaces that define the workbench
-user itnerface (UI) API. Many of these interfaces have
+user interface (UI) API. Many of these interfaces have
 default implementation classes that you can extend to provide simple modifications to the system. In our hello world example, we will extend a workbench view to provide a label that says hello.</P>
 <P >
 The interface of interest is <b><a href="../reference/api/org/eclipse/ui/IViewPart.html">IViewPart</a></b>, which defines the methods that must be implemented to contribute a view to the workbench. The class
@@ -56,7 +56,8 @@ Using the tools to write our plug-in</h4>
 through the steps for building our plug-in with the Eclipse Java IDE.&nbsp; If you
 are not already familiar with the Eclipse workbench and the Java IDE, consult the Java
 Development User Guide for further explanations of the steps we are
-taking.&nbsp; For now we are focusing on the code, not the tool.&nbsp; There are
+taking.&nbsp; For now we are focusing on the code, not the tool.&nbsp; However,
+there are
 some IDE logistics for getting started:</P>
 <ol>
   <li>You'll need to create a project to do your work.&nbsp; The simplest way is
@@ -66,7 +67,7 @@ some IDE logistics for getting started:</P>
     (explained in a moment.)&nbsp; Use <b>org.eclipse.examples.helloworld</b> as
     the name for your project and <b>id</b> of your plug-in.&nbsp; The wizard
     gives you the option of generating code for different kinds of plug-ins, but
-    we want to keep this simple.&nbsp; So for now, be sure to choose <b>Create a
+    we want to keep this simple.&nbsp; For now, be sure to choose <b>Create a
     blank plug-in project </b>on the code generators page.</li>
   <li>Create a package <b>org.eclipse.examples.helloworld</b> underneath the <b>src</b>
     directory for the project.</li>
@@ -115,7 +116,7 @@ code.&nbsp;&nbsp;</P>
   <li><b>Rebuild</b> the project.&nbsp;</li>
 </ol>
 <P >
-Okay, so we've compiled the view.&nbsp; Our new view will look something like this:</P>
+Okay, so we've compiled the view.&nbsp; Our new view is supposed to look something like this:</P>
 
 <p>
 
@@ -169,11 +170,9 @@ plug-in, we must list
 We intend to package the code in
 <b>helloworld.jar</b>, so we register that as our <b>library</b> name.</P>
 <P >
-Finally, we declare what extension point our plug-in is contributing. The <b><a href="../reference/extension-points/org_eclipse_ui_views.html"> org.eclipse.ui.views</a></b> extension has several different configuration parameters. Let's review the parameters we have specified in our manifest.</P>
-<P >
+Finally, we declare what extension point our plug-in is contributing. The <b><a href="../reference/extension-points/org_eclipse_ui_views.html"> org.eclipse.ui.views</a></b> extension has several different configuration parameters.
 We first declare a <b> category</b> for our view extension. Categories can be used to group related views together in the workbench
-<b> Show View</b> dialog. We define our own category, &quot;Hello,&quot; so that it will display in its own group.</P>
-<P >
+<b> Show View</b> dialog. We define our own category, &quot;Hello,&quot; so that it will display in its own group.&nbsp;
 We declare a unique <b> id</b> for our view and specify the name of the
 <b> class</b> that provides the implementation of the view. We also specify a
 <b> name</b> for the view, &quot;Hello Greetings&quot; which will be shown in the Show View dialog and in our view's title bar.</P>
