--- a/bundles/org.eclipse.platform.doc.isv/guide/int_eclipse.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/int_eclipse.htm
@@ -111,6 +111,15 @@ Help system</H4>
     </td>
     <td width="60%">Defines a team programming model for managing and versioning resources.&nbsp;</td>
   </tr>
+  <tr>
+    <td width="40%">
+
+
+<h4>Debug support</h4>
+    </td>
+    <td width="60%">Defines a language independent debug model and UI classes
+      for building debuggers and launchers.</td>
+  </tr>
 </table>
 
 
