--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_elementFactories.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_elementFactories.htm
@@ -70,25 +70,30 @@ The markup is pretty simple. We just have to specify the id of the factory and t
 <P >
 The following code snippet is from the workbench <b>plugin.xml</b>.</P>
 <font color='#4444CC'><pre>
-   &lt;extension
-      point = &quot;org.eclipse.ui.elementFactories&quot;&gt;
+&lt;extension
+         point=&quot;org.eclipse.ui.elementFactories&quot;&gt;
       &lt;factory
-         id =&quot;org.eclipse.ui.internal.model.ResourceFactory&quot;
-         class=&quot;org.eclipse.ui.internal.model.ResourceFactory&quot;&gt;
+            class=&quot;org.eclipse.ui.internal.model.ResourceFactory&quot;
+            id=&quot;org.eclipse.ui.internal.model.ResourceFactory&quot;&gt;
       &lt;/factory&gt;
       &lt;factory
-         id =&quot;org.eclipse.ui.internal.model.WorkspaceFactory&quot;
-         class=&quot;org.eclipse.ui.internal.model.WorkspaceFactory&quot;&gt;
+            class=&quot;org.eclipse.ui.internal.model.WorkspaceFactory&quot;
+            id=&quot;org.eclipse.ui.internal.model.WorkspaceFactory&quot;&gt;
       &lt;/factory&gt;
       &lt;factory
-         id =&quot;org.eclipse.ui.part.FileEditorInputFactory&quot;
-         class=&quot;org.eclipse.ui.part.FileEditorInputFactory&quot;&gt;
+            class=&quot;org.eclipse.ui.part.FileEditorInputFactory&quot;
+            id=&quot;org.eclipse.ui.part.FileEditorInputFactory&quot;&gt;
       &lt;/factory&gt;
       &lt;factory
-         id =&quot;org.eclipse.ui.internal.dialogs.WelcomeEditorInputFactory&quot;
-         class=&quot;org.eclipse.ui.internal.dialogs.WelcomeEditorInputFactory&quot;&gt;
+            class=&quot;org.eclipse.ui.internal.dialogs.WelcomeEditorInputFactory&quot;
+            id=&quot;org.eclipse.ui.internal.dialogs.WelcomeEditorInputFactory&quot;&gt;
       &lt;/factory&gt;
-   &lt;/extension&gt;
+      &lt;factory
+            class=&quot;org.eclipse.ui.internal.WorkingSetFactory&quot;
+            id=&quot;org.eclipse.ui.internal.WorkingSetFactory&quot;&gt;
+      &lt;/factory&gt;
+&lt;/extension&gt;
+
 </pre></font>
 
 
