--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_views.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_views.htm
@@ -33,21 +33,20 @@ can choose to extend the
 <P >
 We implemented a minimal view extension in the hello world example. Now we'll look at one that is aware of other workbench views and responds to user navigation and selection in the workbench. First,
 let's take a look at the declaration of the extension in the <b>plugin.xml</b>.</P>
-<font color='#4444CC'><pre>
-   &lt;extension
-      point=&quot;org.eclipse.ui.views&quot;&gt;
-      &lt;category 
-         id=&quot;org.eclipse.ui.examples.readmetool&quot;
-         name=&quot;&amp;amp;Readme&quot;&gt;
-      &lt;/category&gt;
-      &lt;view
-         id=&quot;org.eclipse.ui.examples.readmetool.views.SectionsView&quot;
-         name=&quot;Readme Sections&quot;
-         icon=&quot;icons/basic/view16/sections.gif&quot;
-         category=&quot;org.eclipse.ui.examples.readmetool&quot;
-         class=&quot;org.eclipse.ui.examples.readmetool.ReadmeSectionsView&quot;&gt;
-      &lt;/view&gt;
-   &lt;/extension&gt;
+<font color='#4444CC'><pre>&lt;extension 
+   point=&quot;org.eclipse.ui.views&quot;&gt;
+	&lt;category 
+	   id=&quot;org.eclipse.ui.examples.readmetool&quot;
+	   name=&quot;%Views.category&quot;&gt;
+	&lt;/category&gt;
+	&lt;view
+ 	   id=&quot;org.eclipse.ui.examples.readmetool.views.SectionsView&quot;
+	   name=&quot;%Views.ReadmeSections&quot;
+	   icon=&quot;icons/view16/sections.gif&quot;
+	   category=&quot;org.eclipse.ui.examples.readmetool&quot;
+	   class=&quot;org.eclipse.ui.examples.readmetool.ReadmeSectionsView&quot;&gt;
+	&lt;/view&gt;
+&lt;/extension&gt;
 </pre></font>
 <P >
 This should look pretty familiar. We see that a new view, <b>ReadmeSectionsView</b>, is contributed to the workbench. The
@@ -62,7 +61,7 @@ workbench by choosing <b>Window-&gt;Show View-&gt;Other... </b> and selecting th
 When we show the <b>ReadmeSectionsView</b>, a view with a list in it pops up.
 The list is empty unless we click on a file with extension <b>.readme</b>, in which case it populates the list with sections from the readme file.</P>
 
-<img border="0" src="images/readmeview.jpg" width="211" height="229">
+<img border="0" src="images/readmeview.jpg" width="277" height="191">
 <P >
 How does the plug-in know about selection changes and how did it recognize the readme file? If we can track this down in the code, we are well on our way to understanding how to build integrated workbench plug-ins.</P>
 <P >
