--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_plugin.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_plugin.htm
@@ -21,25 +21,26 @@ Plug-in definition</H3>
 <P >
 The readme tool plug-in is defined at the top of the <b> plugin.xml</b> file.</P>
 <font color='#4444CC'><pre>
-   &lt;plugin
-      name = &quot;Readme File Editing Tool&quot;
-      id = &quot;org.eclipse.ui.examples.readmetool&quot;
-      version = &quot;0.9&quot;
-      provider-name = &quot;Object Technology International, Inc.&quot;
-      class=&quot;org.eclipse.ui.examples.readmetool.ReadmePlugin&quot;&gt;
+   
+&lt;plugin
+   name = &quot;%Plugin.name&quot;
+   id = &quot;org.eclipse.ui.examples.readmetool&quot;
+   version = &quot;2.0.0&quot;
+   provider-name = &quot;%Plugin.providerName&quot;
+   class=&quot;org.eclipse.ui.examples.readmetool.ReadmePlugin&quot;&gt;
 
-      &lt;requires&gt;
-         &lt;import plugin=&quot;org.eclipse.ui&quot;/&gt;
-         &lt;import plugin=&quot;org.eclipse.core.resources&quot;/&gt;
-      &lt;/requires&gt;
+   &lt;requires&gt;
+      &lt;import plugin=&quot;org.eclipse.ui&quot;/&gt;
+      &lt;import plugin=&quot;org.eclipse.core.resources&quot;/&gt;
+   &lt;/requires&gt;
 
-      &lt;runtime&gt;
-         &lt;library name=&quot;readmetool.jar&quot;/&gt; 
-      &lt;/runtime&gt;
-   &lt;/plugin&gt;
-</pre></font>
+   &lt;runtime&gt;
+     &lt;library name=&quot;readmetool.jar&quot;/&gt; 
+   &lt;/runtime&gt;
+   ...</pre></font>
 <P >
-The plug-in definition includes the name, id, version, and vendor name of the plug-in. We saw these parameters before in our hello world plug-in. The readme tool also defines a specialized plug-in class,
+The plug-in definition includes the <b>name</b>, <b>id,</b> <b>version</b>, and <b>provider</b>
+<b>name</b> of the plug-in. We saw most of these parameters before in our hello world plug-in. The readme tool also defines a specialized plug-in class,
 <b>ReadmePlugin</b>. </P>
 <P >
 The workbench UI and resources plug-ins are listed as required plug-ins so that the platform will know that the readme tool is dependent on
