--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_structure.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_structure.htm
@@ -23,14 +23,14 @@ Workbench</H3>
 We've been using the term <b> workbench</b> loosely to refer to &quot;that window that opens when you start the platform.&quot; Let's drill down a little and look at some of the visual components that make up
 the workbench.</P>
 
-<img border="0" src="images/workbench_decomposed.jpg" width="480" height="578">
+<img border="0" src="images/workbench_decomposed.jpg" width="680" height="620">
 <P >
 For the rest of this discussion, when we use the term workbench, we will be referring to the workbench window
 (<b><a href="../reference/api/org/eclipse/ui/IWorkbenchWindow.html">IWorkbenchWindow</a></b>). The workbench window is the top-level window in a workbench. It is the frame that holds the menu bar,
 tool bar, status line, short cut bar, and pages. In general, you don't need to program to the workbench window. You just want to know that it's there.</P>
 <i><blockquote>
-Note:&nbsp; You can open multiple workbench windows using
-<b> Perspective-&gt;Open </b>if you have set up your workbench preferences to
+Note:&nbsp; You can open multiple workbench windows using <b>Open Perspective...
+</b>if you have set up your workbench preferences to
 open perspectives in a new window.
 <b> </b>By default, new perspectives are opened in the
 same workbench window.&nbsp; Each workbench window is a self-contained world of editors and views,
