--- a/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_btb.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_btb.htm
@@ -17,6 +17,17 @@ Beyond the basics</H2>
 Hopefully you've got a good idea of how you can contribute to an extension point, and package the functionality in a plug-in. We are ready to take a closer look at the resources plug-in and its API. Then we'll put everything together to implement a more complex workbench plug-in that works with
 a special kind of file.</P>
 <P >
+For more information on workbench extension points, consult the following
+topics:</P>
+<ul>
+  <li><a href="workbench_basicext.htm">Basic workbench extension points</a></li>
+  <li><a href="workbench_menus.htm">Workbench menu contributions</a></li>
+  <li><a href="workbench_advext.htm">More workbench extensions</a></li>
+  <li><a href="dialogs_wizards_extensions.htm">Workbench wizard extension points</a></li>
+  <li><a href="preferences_prefs.htm">Preferences</a></li>
+  <li><a href="preferences_prop.htm">Properties</a></li>
+</ul>
+<P >
 A complete list of extension points can be found in the <a href="../reference/extension-points/index.html">Platform
 Extension Point Reference</a>.</P>
 <P >
