--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_actionfilters.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_actionfilters.htm
@@ -16,17 +16,46 @@ Workbench action filters</H2>
 <p>
 When a plug-in contributes an action to the workbench UI using one of the menu
 extension points, it can specify conditions under which the menu item is enabled
-(or visible) in the menu.&nbsp; Action filters (<b><a href="../reference/api/org/eclipse/ui/IActionFilter.html">IActionFilter</a></b>)
-allow an object in a view or editor to further refine the enablement criteria
-for an action.&nbsp; An action filter dynamically computes the enablement
+(or visible) in the menu.&nbsp; In addition to supplying simple enabling
+conditions such as selection counts and selection classes, plug-ins can use <b>boolean
+expressions</b> that give more refined control over the enablement of an action.</p>
+
+
+<h3>
+Boolean expressions</h3>
+
+
+<P CLASS="CellBody">
+The boolean expressions can contain simple boolean operators (NOT, AND, OR) and predefined expressions that evaluate the following conditions:</P>
+<ul>
+  <li>
+    <p CLASS="CellBody"><b>objectClass</b> - true if each object in the
+    selection subclasses or implements the class.</p>
+  </li>
+  <li>
+    <p CLASS="CellBody"><b>objectState</b> - true if the named attribute meets
+    the specified value.&nbsp; <b><a href="../reference/api/org/eclipse/ui/IActionFilter.html">IActionFilter</a>
+    </b>assists in evaluating the expression.&nbsp; An action filter dynamically computes the enablement
 criteria for an action based on the target selection and the value of named
 attributes.</p>
+  </li>
+  <li>
+    <p CLASS="CellBody"><b>systemProperty</b> - true if the named system
+    property meets the specified value.</p>
+  </li>
+  <li>
+    <p CLASS="CellBody"><b>pluginState</b> - specifies whether the specified
+    plugin (by <b>id</b>) should be <b>installed</b> or <b>activated</b> </p>
+  </li>
+</ul>
+<p CLASS="CellBody">See <a href="../reference/extension-points/actionExpressions.html">action
+expressions </a>for samples of these expressions and a complete description of
+the XML.</p>
 
 
 <p>
-First, let's look at the extension points that contribute actions, the
-attributes in the XML markup that affect enablement, and how action filters
-extend the capability to compute the enablement criteria:</p>
+The following table summarizes extension points that contribute actions, the
+attributes in the XML markup that affect enablement, and how expressions extend the capability to compute the enablement criteria:</p>
 
 
 <TABLE BORDER="1" width="671">
@@ -41,7 +70,7 @@ Attributes affecting enablement</P>
 </TH>
 <TH ROWSPAN="1" COLSPAN="1" width="335">
 <P CLASS="CellHeading">
-Action filter attributes</P>
+Boolean expressions</P>
 </TH>
 </TR>
 <TR>
@@ -160,38 +189,6 @@ satisfied before applying the enablement expression.</P>
 </TD>
 </TR>
 </TABLE>
-
-
-<h3>
-Boolean expressions</h3>
-
-
-<P CLASS="CellBody">
-The <b>enablement</b> and <b>visibility</b> expressions consist of boolean
-expressions containing simple boolean operators (NOT, AND, OR) and predefined
-boolean expressions that evaluate the following conditions:</P>
-<ul>
-  <li>
-    <p CLASS="CellBody"><b>objectClass</b> - true if each object in the
-    selection subclasses or implements the class.</p>
-  </li>
-  <li>
-    <p CLASS="CellBody"><b>objectState</b> - true if the named attribute meets
-    the specified value.&nbsp; <b><a href="../reference/api/org/eclipse/ui/IActionFilter.html">IActionFilter</a>
-    </b>assists in evaluating the expression.</p>
-  </li>
-  <li>
-    <p CLASS="CellBody"><b>systemProperty</b> - true if the named system
-    property meets the specified value.</p>
-  </li>
-  <li>
-    <p CLASS="CellBody"><b>pluginState</b> - specifies whether the specified
-    plugin (by <b>id</b>) should be <b>installed</b> or <b>activated</b> </p>
-  </li>
-</ul>
-<p CLASS="CellBody">See <a href="../reference/extension-points/actionExpressions.html">action
-expressions </a>for samples of these expressions and a complete description of
-the XML.</p>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
