--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_perspectives.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_perspectives.htm
@@ -31,21 +31,21 @@ extension point.</P>
 <P >
 The specification of the perspective in the <b> plugin.xml</b> is straightforward. The following markup is used by the workbench in defining its own resource perspective.</P>
 <font color='#4444CC'><pre>
-   &lt;extension
-      point=&quot;org.eclipse.ui.perspectives&quot;&gt;
+&lt;extension
+         point=&quot;org.eclipse.ui.perspectives&quot;&gt;
       &lt;perspective
-         id=&quot;org.eclipse.ui.resourcePerspective&quot;
-         name=&quot;Resource&quot;
-         class=&quot;org.eclipse.ui.internal.ResourcePerspective&quot;&gt;
+            name=&quot;%Perspective.resourcePerspective&quot;
+            icon=&quot;icons/full/cview16/resource_persp.gif&quot;
+            class=&quot;org.eclipse.ui.internal.ResourcePerspective&quot;
+            id=&quot;org.eclipse.ui.resourcePerspective&quot;&gt;
       &lt;/perspective&gt;
-   &lt;/extension&gt;
-</pre></font>
+   &lt;/extension&gt;</pre></font>
 <P >
 A plug-in must supply an <b> id</b> and <b> name</b> for the perspective, along with the name of the
 <b> class</b> that implements the perspective. An <b> icon</b> can also be specified. The perspective class should implement
 <b><a href="../reference/api/org/eclipse/ui/IPerspectiveFactory.html">IPerspectiveFactory</a></b>.</P>
 <P >
-We can see from the markup that the real work happens in the code. The interface for the perspective factory is straightforward. Implementors of
+We can see from the markup that the real work must be happening in the code. The interface for the perspective factory is straightforward. Implementors of
 <b><a href="../reference/api/org/eclipse/ui/IPerspectiveFactory.html">IPerspectiveFactory</a></b>
 are expected to configure an <b><a href="../reference/api/org/eclipse/ui/IPageLayout.html"> IPageLayout</a></b> with information that describes the
 perspective and its perspective page layout. </P>
