--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_resourceFilters.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_resourceFilters.htm
@@ -22,16 +22,19 @@ The workbench filters out the pattern &quot;<b>.*</b>&quot; to exclude internal 
 The markup for the resource filters extension is simple.&nbsp; The following is
 from the workbench <b>plugin.xml</b>.</P>
 <font color='#4444CC'><pre>
-   &lt;extension
-      point= &quot;org.eclipse.ui.resourceFilters&quot;&gt;
-      &lt;filter pattern = &quot;.*&quot; selected = &quot;false&quot;/&gt;
+&lt;extension
+         point=&quot;org.eclipse.ui.resourceFilters&quot;&gt;
+      &lt;filter
+            selected=&quot;false&quot;
+            pattern=&quot;.*&quot;&gt;
+      &lt;/filter&gt;
    &lt;/extension&gt;
 </pre></font>
 <P >The filters can be enabled by the user using the resource navigator's local
 pull-down menu.</P>
 
 
-<P ><img border="0" src="images/filtersmenu.jpg" width="269" height="129"></P>
+<P ><img border="0" src="images/filtersmenu.jpg" width="405" height="137"></P>
 
 
 <P >In addition to declaring the <b>filter pattern</b>,
@@ -41,7 +44,7 @@ This only determines the initial state of the filter pattern.&nbsp; The user can
 control which filter patterns are active.</P>
 
 
-<P ><img border="0" src="images/filtersselection.jpg" width="344" height="422"></P>
+<P ><img border="0" src="images/filtersselection.jpg" width="344" height="368"></P>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" width="250" height="12"></a></p>
