--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_actionSets.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_basicext_actionSets.htm
@@ -64,7 +64,7 @@ Wow, there's a lot going on here!&nbsp; Let's take it a step at a time, looking
 only at the first action.&nbsp;&nbsp;</P>
 <P >
 First, the action set is declared and given a <b>label</b>.&nbsp;
-The label &quot;ReadMe Actions&quot; (defined for %ActionSet.name in the plug-in's
+The label &quot;ReadMe Actions&quot; (defined for <b> %ActionSet.name</b> in the plug-in's
 properties file) is used to display the action set in the
 dialog shown above.&nbsp; Since we set <b> visible</b> to true, the workbench will initially have the action set
 check marked in the action set list and the actions will be visible.</P>
@@ -91,13 +91,13 @@ The action definition (<b>id</b>,
 similar to the other actions we've seen in views, editors, and popups.&nbsp;
 We'll focus here on what's different:&nbsp; where does the action go?&nbsp; We
 use&nbsp; <b>menubarPath</b> and <b>toolbarPath</b>
-to indicate the location.&nbsp; First, we add the actions to a slot in the menu
-that we just defined.&nbsp;&nbsp;</P>
+to indicate the location.&nbsp; First, we set the <b>menubarPath</b> to add the actions to a slot in the menu
+that we just defined (&nbsp;<b>&quot;window/org_eclipse_ui_examples_readmetool/slot1&quot;</b>).</P>
 <P >
 <img border="0" src="images/readmeactionsetmenu.jpg" width="569" height="75"></P>
 <P >
-Then, we define a new toolbarPath to insert our actions in the workbench tool
-bar.&nbsp; Since it's a new tool path, the workbench will decide where it goes
+Then, we define a new <b> toolbarPath</b> to insert our actions in the workbench tool
+bar.&nbsp; Since we've defined a new tool path, <b>&quot;readme&quot;</b>, the workbench will decide where it goes
 relative to other plug-in's toolbar contributions.</P>
 <P >
 <img border="0" src="images/readmeactionsettoolbar.jpg" width="248" height="55"></P>
@@ -174,10 +174,41 @@ their part becomes active.&nbsp;&nbsp;</P>
 
 
 <P >The readme tool sets these global actions in its <b>ReadmeEditorActionBarContributor</b>.&nbsp;
-This means that the actions will be shown in the action set when the readme file
+We saw these contributions before when we looked at the editor contribution
+class.&nbsp;&nbsp;</P>
+
+
+<pre ><font color="#4444CC">...
+action2 = new <b>RetargetAction</b>(<b>IReadmeConstants.RETARGET2</b>, MessageUtil.getString(&quot;Editor_Action2&quot;));
+action2.setToolTipText(MessageUtil.getString(&quot;Readme_Editor_Action2&quot;));
+action2.setDisabledImageDescriptor(ReadmeImages.EDITOR_ACTION2_IMAGE_DISABLE);
+action2.setImageDescriptor(ReadmeImages.EDITOR_ACTION2_IMAGE_ENABLE);
+...
+action3 = new <b>LabelRetargetAction</b>(<b>IReadmeConstants.LABELRETARGET3</b>, MessageUtil.getString(&quot;Editor_Action3&quot;));
+action3.setDisabledImageDescriptor(ReadmeImages.EDITOR_ACTION3_IMAGE_DISABLE);
+action3.setImageDescriptor(ReadmeImages.EDITOR_ACTION3_IMAGE_ENABLE);
+...&nbsp;&nbsp;
+<b>handler2</b> = new EditorAction(MessageUtil.getString(&quot;Editor_Action2&quot;)); 
+...
+<b>handler3</b> = new EditorAction(MessageUtil.getString(&quot;Editor_Action3&quot;)); 
+...</font></pre>
+
+
+<P >The readme tool creates additional editor actions, <b>handler2</b> and <b>handler3</b>,&nbsp;
+to be used for the retargeted actions.&nbsp; They are associated with the
+actions by registering them as global handlers.</P>
+
+
+<pre ><font color="#4444CC">public void init(IActionBars bars, IWorkbenchPage page) {
+	super.init(bars, page);
+	bars.setGlobalActionHandler(<b>IReadmeConstants.RETARGET2, handler2</b>);
+	bars.setGlobalActionHandler(<b>IReadmeConstants.LABELRETARGET3, handler3</b>);
+	...</font></pre>
+
+
+<P >All of this means that the retargeted actions will be shown in the action set when the readme file
 editor is active.&nbsp; Sure enough, these actions become visible when the
-editor is active and the <b>readmeRelabelRetargetAction</b> has been renamed,
-since <b>allowLabelUpdate</b> was indicated.</P>
+editor is active and the <b>readmeRelabelRetargetAction</b> has been renamed.</P>
 
 
 <P ><img border="0" src="images/readmeretargeted.jpg" width="493" height="78"></P>
