--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_menupaths.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_menupaths.htm
@@ -32,9 +32,9 @@ The following description of the help menu is adapted from the <a href="../refer
 class definition.</P>
 <font color='#4444CC'><pre>
    Standard Help menu actions
-   Start group HELP_START &quot;start&quot;
-   End group HELP_END &quot;end&quot;
-   About action ABOUT &quot;About&quot;
+   Start group - HELP_START - &quot;start&quot;
+   End group - HELP_END - &quot;end&quot;
+   About action - ABOUT - &quot;About&quot;
 </pre></font>
 <P >
 The standard workbench help menu consists of a named group called &quot;<b>start</b>,&quot; followed by a named group called &quot;<b>end</b>,&quot; followed by the &quot;<b>About</b>&quot; action. Why two groups? To provide some control for plug-ins for how far down they appear in the help menu. When you define a menu, you can define as many slots as you like. Adding more slots gives other plug-ins more control over where their contributions appear relative to existing contributions. </P>
@@ -45,23 +45,24 @@ set containing the &quot;Help Contents&quot; menu to the workbench.&nbsp; Here's
 the markup from the <b>org.eclipse.help.ui</b> plug-in's
 <b>plugin.xml</b>. </P>
 <font color='#4444CC'><pre>
-   &lt;extension 
-      point=&quot;org.eclipse.ui.actionSets&quot;&gt;
-      &lt;actionSet
-         id=&quot;org.eclipse.help.internal.ui.HelpActionSet&quot;
-         label=&quot;%help&quot;
-         visible=&quot;true&quot;&gt;
-         &lt;action
-            id=&quot;org.eclipse.help.internal.ui.HelpAction&quot;
-            menubarPath=&quot;help/helpEnd&quot;
-            label=&quot;%helpcontents&quot;
-            class=&quot;org.eclipse.help.internal.ui.ShowHelp&quot;/&gt;
-      &lt;/actionSet&gt;
-   &lt;/extension&gt;
+&lt;extension point=&quot;org.eclipse.ui.actionSets&quot;&gt;
+	&lt;actionSet
+		id=&quot;org.eclipse.help.internal.ui.HelpActionSet&quot;
+		label=&quot;%help&quot;
+		visible=&quot;true&quot;&gt;
+			
+	&lt;action id=&quot;org.eclipse.help.internal.ui.HelpAction&quot;
+		<b>menubarPath=&quot;help/helpEnd&quot;</b>
+		label=&quot;%helpcontents&quot;
+		class=&quot;org.eclipse.help.ui.internal.HelpContentsAction&quot;
+		icon=&quot;icons/view.gif&quot;
+		helpContextId=&quot;org.eclipse.help.ui.helpContentsMenu&quot;
+		tooltip=&quot;%openhelpcontents&quot;/&gt;
+	...
 </pre></font>
 <P >
 The new help action will be placed in the help menu, inside the <b> helpEnd</b> group. If no other plug-in has contributed to the help menu, this means the &quot;Help Contents&quot; menu item will appear as the first item in the menu above the &quot;About&quot; item. If another plug-in wanted to contribute an item that always appeared above the &quot;Help Contents&quot; item, then it could specify the
-<b> helpStart</b> group on its path.</P>
+<b> helpStart</b> group on its path.&nbsp;&nbsp;</P>
 <P >
 Toolbar paths work similarly. Whenever a path is specified, it must end with the name of a group in the toolbar.</P>
 
@@ -109,40 +110,35 @@ We saw this technique when the readme tool defined a new menu for its action
 set.&nbsp; Let's look at the markup one more time now that we've looked at menu
 paths in more detail. </P>
 <font color='#4444CC'><pre>
-   &lt;extension 
-      point = &quot;org.eclipse.ui.actionSets&quot;&gt;
-      &lt;actionSet
-         id=&quot;org_eclipse_ui_examples_readmetool_actionSet&quot;
-         label=&quot;ReadMe Actions&quot;
-         visible=&quot;true&quot;&gt;
-         &lt;menu
-            id=&quot;org_eclipse_ui_examples_readmetool&quot;
-            label=&quot;Readme &amp;amp;File Editor&quot;
-            path=&quot;window/additions&quot;&gt; 
-            &lt;separator name=&quot;slot1&quot;/&gt;
-            &lt;separator name=&quot;slot2&quot;/&gt;
-            &lt;separator name=&quot;slot3&quot;/&gt;
-         &lt;/menu&gt;
-         &lt;action
-            id=&quot;org_eclipse_ui_examples_readmetool_readmeAction&quot;
-            menubarPath=&quot;window/org_eclipse_ui_examples_readmetool/slot1&quot;
-            toolbarPath=&quot;readme&quot;
-            label=&quot;&amp;amp;Open Readme Browser@Ctrl+R&quot;
-            tooltip=&quot;Open Readme Browser&quot;
-            helpContextId=&quot;org.eclipse.ui.examples.readmetool.open_browser_action_context&quot;
-            icon=&quot;icons/basic/ctool16/openbrwsr.gif&quot;
-            class=&quot;org.eclipse.ui.examples.readmetool.WindowActionDelegate&quot;
-            enablesFor=&quot;1&quot;&gt;
-            &lt;selection
-               class=&quot;org.eclipse.core.resources.IFile&quot;
-               name=&quot;*.readme&quot;&gt;
-            &lt;/selection&gt;
-         &lt;/action&gt;
-      &lt;/actionSet&gt;
-   &lt;/extension&gt;
+   &lt;extension point = &quot;org.eclipse.ui.actionSets&quot;&gt;
+   &lt;actionSet id=&quot;org_eclipse_ui_examples_readmetool_actionSet&quot;
+	   label=&quot;%ActionSet.name&quot;
+	   visible=&quot;true&quot;&gt;
+	   &lt;menu id=&quot;org_eclipse_ui_examples_readmetool&quot;
+		   label=&quot;%ActionSet.menu&quot;
+		   path=&quot;window/additions&quot;&gt; 
+		   &lt;separator name=&quot;slot1&quot;/&gt;
+		   &lt;separator name=&quot;slot2&quot;/&gt;
+		   &lt;separator name=&quot;slot3&quot;/&gt;
+	   &lt;/menu&gt;
+	   &lt;action id=&quot;org_eclipse_ui_examples_readmetool_readmeAction&quot;
+		   menubarPath=&quot;window/org_eclipse_ui_examples_readmetool/slot1&quot;
+		   toolbarPath=&quot;readme&quot;
+		   label=&quot;%ReadmeAction.label&quot;
+		   tooltip=&quot;%ReadmeAction.tooltip&quot;
+		   helpContextId=&quot;org.eclipse.ui.examples.readmetool.open_browser_action_context&quot;
+		   icon=&quot;icons/ctool16/openbrwsr.gif&quot;
+		   class=&quot;org.eclipse.ui.examples.readmetool.WindowActionDelegate&quot;
+		   enablesFor=&quot;1&quot;&gt;
+		   &lt;selection class=&quot;org.eclipse.core.resources.IFile&quot;
+				name=&quot;*.readme&quot;&gt;
+		   &lt;/selection&gt;
+	   &lt;/action&gt;
+	   ...
 </pre></font>
-<P >We added a new menu called&nbsp; &quot;<b>org_eclipse_ui_examples_readmetool</b>.&quot; Its label is the string &quot;<b>Readme
-&amp;File Editor</b>.&quot; Within this menu, we define three named
+<P >We added a new menu called&nbsp; &quot;<b>org_eclipse_ui_examples_readmetool</b>&quot;
+whose label is defined in by the key &quot;<b>%ActionSet.name</b>&quot; in the
+properties file. Within this menu, we define three named
 groups:&nbsp; &quot;<b>slot1</b>,&quot; &quot;<b>slot2</b>,&quot;
 and &quot;<b>slot3</b>.&quot;&nbsp; We add this new
 menu to the path &quot;<b>window/additions</b>.&quot;</P>
