Doc update for 2.0

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-138.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-138.htm
@@ -31,13 +31,12 @@ Inspect</SPAN></b>
  from its pop-up menu.
 The result of evaluating the expression is shown in the Display view (if <SPAN CLASS="Label">
 Display</SPAN>
- was chosen), or in the Inspector (if <SPAN CLASS="Label">
+ was chosen), or in the Expressions view (if <SPAN CLASS="Label">
 Inspect</SPAN>
  was chosen).</P>
   </li>
 </ol>
-<P CLASS="Para">
-<b>Note</b>:	Expression evaluation is not supported in class files or inner types. </P>
+
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="../concepts/concepts-10.htm">Debugger</a><br>
 <a href="../concepts/concepts-7.htm">Java editor</a></p>
