*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_minimal.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/firstplugin_minimal.htm
@@ -142,7 +142,7 @@ we are adding.</P>
    &lt;plugin
       name=&quot;Hello World Example&quot; 
       id=&quot;org.eclipse.examples.helloworld&quot;
-      version=&quot;1.0&quot;
+      version=&quot;1.0&quot;&gt;
       &lt;requires&gt;
          &lt;import plugin=&quot;org.eclipse.ui&quot; /&gt;
       &lt;/requires&gt;
