Adding back/next links.

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36.htm
@@ -12,7 +12,12 @@ will use the Search button <img align="Texttop" border="0" src="../images/Image5
 perform a text search across the resources shown in our Navigator. Next we will learn
 how to use the Search view to work with the search results.</p>
 
-<p><br>
+
+<P><a href="qs-36a.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Starting a search</a><p><a href="qs-35d.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Moving</a><br>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </p>
 
