--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d.htm
@@ -70,7 +70,13 @@ while entering the description you can press Escape to cancel the dialog.</P>
 </TABLE>
 </DIV>
 </DIV>
-<P><br>
+
+
+<P><a href="qs-37-2d2.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Associated tasks</a><P><a href="qs-37-2b.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Tasks and markers</a><br>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
