--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39c.htm
@@ -84,7 +84,16 @@ converted to a&nbsp; floating view.
 </TR>
 </TBODY>
 </TABLE>
-<P><br>
+
+
+<P><a href="qs-39d.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Docking views</a><P><a href="qs-39b.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Floating views</a></P>
+
+
+<P>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
