--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39g.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39g.htm
@@ -20,7 +20,17 @@
 </ul>
 <p CLASS="Para">Restoring a view to its original size is done in a similar
 manner.</p>
-<P><br>
+<P><a href="qs-40.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Fast views</a></P>
+
+
+<P><a href="qs-39f.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Rearranging tabbed views</a></P>
+
+
+<P>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
