--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40.htm
@@ -4,7 +4,7 @@
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Fast views and Editors</title>
+<title>Fast views</title>
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
@@ -19,6 +19,16 @@ they do not take up screen space on your workbench window.&nbsp;</p>
 In this section we will learn how to convert the Navigator view into a fast
 view.
 </P>
+
+
+<P><a href="qs-40a.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Creating fast views</a></P>
+
+
+<P><a href="qs-39g.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Maximizing</a></P>
 
 
 <P>
