--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40a.htm
@@ -72,8 +72,14 @@ view.&nbsp; From this menu we would have chosen Fast View.
 </blockquote>
 
 
-<P>&nbsp;
-</P>
+<P><a href="qs-40b.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Working with fast views</a></P>
+
+
+<P><a href="qs-40.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Fast views</a></P>
 
 
 <P>
