--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43.htm
@@ -43,7 +43,20 @@ specific type of task, or working with a specific types of
 resources.&nbsp;&nbsp; </P>
 <P CLASS="Para">
 <img align="texttop" border="0" src="../images/image1.jpg" width="643" height="496"> </P>
-<P>&nbsp;<br>
+<P>&nbsp;</P>
+
+
+<P><a href="qs-43b.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+New perspectives</a></P>
+
+
+<P><a href="qs-40b.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Working with fast views</a></P>
+
+
+<P>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
