--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43b.htm
@@ -102,7 +102,17 @@ will observe that our shortcut bar now has three areas:</p>
 <p CLASS="Head">In step 6 above we observed that the set of views and editors
 are different between the open perspectives. Similarly each perspective has its own
 list of fast views.&nbsp;</p>
-<P>&nbsp;<br>
+<P><a href="qs-43c.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+New windows</a></P>
+
+
+<P><a href="qs-43.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Perspectives</a></P>
+
+
+<P>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
