--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43e.htm
@@ -121,12 +121,17 @@ Resource perspective to its original layout proceed as follows:</p>
     </tr>
   </tbody>
 </table>
-<p CLASS="Para">&nbsp;</p>
-<blockquote>
-  <p CLASS="Para">&nbsp;</p>
-  <p CLASS="Para">&nbsp;</p>
-</blockquote>
-<P>&nbsp;<br>
+<P><a href="qs-43f.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Configuring perspectives</a>&nbsp;</P>
+
+
+<P><a href="qs-43d.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Replacing perspectives</a></P>
+
+
+<P>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
