--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43f.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43f.htm
@@ -74,7 +74,20 @@ can also control several other key aspects of a perspective. These include:</p>
     </tr>
   </tbody>
 </table>
-<P>&nbsp;<br>
+<P>&nbsp;</P>
+
+
+<P><a href="qs-52.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Comparing</a>&nbsp;</P>
+
+
+<P><a href="qs-43e.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Saving perspectives</a></P>
+
+
+<P>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
