--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52d.htm
@@ -45,7 +45,17 @@ difference editor.</p>
 <p CLASS="Head">Initially the compare editor might seem a bit daunting but if
 you work down the left side and focus on the items marked as gray, and those
 items missing from the left side, it turns out not to be as tricky as it first
-seems.<p CLASS="Head"><br>
+seems.<P><a href="qs-52e.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Working with the comparison</a>&nbsp;</P>
+
+
+<P><a href="qs-52c.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Simple compare</a></P>
+
+
+<p CLASS="Head">
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 
