--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-55.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-55.htm
@@ -125,7 +125,20 @@ lines.&nbsp;</P>
 </TR>
 </TBODY>
 </TABLE>
-<P>&nbsp;<br>
+<P>&nbsp;</P>
+
+
+<P><a href="qs-55b.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Exiting the workbench</a>&nbsp;</P>
+
+
+<P><a href="qs-52e.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Working with the comparison</a></P>
+
+
+<P>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
