--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-34c.htm
@@ -83,7 +83,13 @@ double-clicking it in the Navigator view.
 </TR>
 </TBODY>
 </TABLE>
-<P>&nbsp;<br>
+
+
+<P><a href="qs-34d.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Editing files outside the workbench</a><P><a href="qs-34b.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+External editors</a><br>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
