--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35c.htm
@@ -115,11 +115,14 @@ Rename the folder back to its original name (JanesOtherFolder).
 </P>
 
 
-<P>&nbsp;
+<P><a href="qs-35d.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Moving</a><P><a href="qs-35b.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Copying</a><br>
 </P>
 
 
-<P>&nbsp;<br>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
