--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-35d.htm
@@ -77,7 +77,11 @@ down Ctrl while performing the drag and drop operation.
 </P>
 
 
-<P>&nbsp;<br>
+<P><a href="qs-36.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Searching</a><P><a href="qs-35c.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Renaming</a><br>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
