--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
@@ -133,7 +133,13 @@ Again to repeat the initial search. Notice that once again we have 4 matches.
 </TR>
 </TBODY>
 </TABLE>
-<p><br>
+
+
+<P><a href="qs-37-2b.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Tasks and markers</a><p><a href="qs-36a.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Starting a search</a><br>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </p>
 
