--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39.htm
@@ -9,7 +9,7 @@
 </HEAD>
 <BODY BGCOLOR="#ffffff">
 <h2>
-Rearranging views &amp; editors</h2>
+Rearranging views and editors</h2>
 <P CLASS="Para">We have seen how to work with editors and views. In this
 section we will learn how to rearrange these views and editors to customize the layout of the workbench.</P>
 <P CLASS="Para"><b>Setup</b></P>
@@ -56,7 +56,14 @@ You can always get back to the welcome page by choosing Help &gt; Welcome.</P>
 </P>
 
 
-<P><br>
+<P><a href="qs-39b.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Floating views</a><P><a href="qs-37-3f.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Removing bookmarks</a></P>
+
+
+<P>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
