--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39b.htm
@@ -79,7 +79,14 @@ You can move the floating view around by dragging its title bar. </P>
 </P>
 
 
-<P><br>
+<P><a href="qs-39c.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Drop cursors</a><P><a href="qs-39.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Rearranging views and editors</a></P>
+
+
+<P>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
