--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39f.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39f.htm
@@ -60,7 +60,17 @@ Repositories tab.</P>
 </TR>
 </TBODY>
 </TABLE>
-<P><br>
+<P><a href="qs-39g.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Maximizing</a></P>
+
+
+<P><a href="qs-39e.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Tiling editors</a></P>
+
+
+<P>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
