--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-40b.htm
@@ -93,8 +93,14 @@ file.&nbsp;&nbsp; </P>
 </ul>
 
 
-<P>&nbsp;
-</P>
+<P><a href="qs-43.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Perspectives</a></P>
+
+
+<P><a href="qs-40a.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Creating fast views</a></P>
 
 
 <P>
