--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43c.htm
@@ -25,6 +25,16 @@ this default behavior using Window &gt; Preferences &gt; Workbench.</p>
 
 
 </blockquote>
+<P><a href="qs-43d.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Replacing perspectives</a></P>
+
+
+<P><a href="qs-43b.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+New perspectives</a></P>
+
+
 <P>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
