--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-43d.htm
@@ -29,7 +29,17 @@ this default behavior using Window &gt; Preferences &gt; Workbench.</p>
 
 
 </blockquote>
-<P>&nbsp;<br>
+<P><a href="qs-43e.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Saving perspectives</a>&nbsp;</P>
+
+
+<P><a href="qs-43c.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+New windows</a></P>
+
+
+<P>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
