--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-52c.htm
@@ -48,12 +48,22 @@ this compare editor.</p>
 </P>
 
 
-<P><br>
-<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
-</P>
-
-
 </blockquote>
+
+
+<P><a href="qs-52d.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Understanding the comparison</a>&nbsp;</P>
+
+
+<P><a href="qs-52.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Comparing</a></P>
+
+
+<p>
+<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+</p>
 
 
 </BODY>
