--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-55b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-55b.htm
@@ -13,8 +13,18 @@ Exiting the workbench</h2>
 <P CLASS="Para">
 Each time you exit the workbench, the workbench is automatically saved, including all open perspectives and windows. The next time you reopen the workbench, it will appear exactly as it was when you closed it.</P>
 <p>
-To exit the workbench, select File &gt; Exit from the menubar.</p>
-<P>&nbsp;<br>
+To exit the workbench, select File &gt; Exit from the menu bar.</p>
+<P><a href="qs-60_team.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Team tutorial</a>&nbsp;</P>
+
+
+<P><a href="qs-55.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Local history</a></P>
+
+
+<P>
 <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
