--- a/bundles/org.eclipse.platform.doc.user/no_help_exists.htm
+++ b/bundles/org.eclipse.platform.doc.user/no_help_exists.htm
@@ -12,7 +12,7 @@ No Help Exists</H1>
 <p CLASS="Head">There are no available help topics associated with this
 item.&nbsp;&nbsp;&nbsp;</p>
 <P>&nbsp;<br>
-<img src = ngibmcpy.gif width="195" height="12">
+<a href="hglegal2002.htm"><img src="images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000, 2002. All Rights Reserved." border="0"></a>
 </P>
 
 
