--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3c.htm
@@ -26,7 +26,7 @@ view them using the Bookmarks view.</p>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-From the menubar, select Perspective &gt; Show View &gt; Bookmarks. The
+From the menubar, select Window &gt; Show View &gt; Bookmarks. The
 Bookmarks view appears in the workbench.&nbsp;</P>
 </TD>
 </TR>
@@ -92,9 +92,9 @@ The new bookmark also appears in the Bookmarks view.</P>
 <TD valign="top" align="left">
 <P CLASS="Para">
 In the Navigator view select the file JanesText.txt. From the file's popup menu
-choose Add Bookmark...</P>
+choose Add Bookmark</P>
 <P CLASS="Para">
-This will bookmark the file. Observe the Bookmarks view now contains two
+This will bookmark the file using the filename to describe the bookmark. Observe the Bookmarks view now contains two
 bookmarks.</P>
 <blockquote>
 <P CLASS="Para">
