--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3f.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3f.htm
@@ -51,7 +51,9 @@ Notice that the bookmark is removed from the Bookmarks view.</P>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>3.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
 <P>We should have one remaining bookmark. This bookmark is associated with a line in the file JanesFile.txt. There are two
@@ -88,7 +90,9 @@ will allow us to watch the editor update as we delete the bookmark.</P>
 </TR>
 <TR>
 <TD valign="top" align="left">
+<p CLASS="Para">
 <b>5.</b>
+</p>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">In the Bookmarks view, select JanesFile.txt (the remaining
