--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-39.htm
@@ -28,7 +28,7 @@ little house keeping.</P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-Start by choosing Perspective &gt; Reset and selecting OK. This will reset the
+Start by choosing Window &gt; Reset Perspective and selecting OK. This will reset the
 current perspective to its original views and layout.</P>
 </TD>
 </TR>
